# rust-syslog-collector

./: Cargo.toml  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml  echo.yaml
envoy/: envoy.yaml
rust-syslog-rfc5424/src/: parser.rs
syslog-client/: Cargo.toml
syslog-client/src/: main.rs
syslog-server/: Cargo.toml
syslog-server/src/: main.rs
syslog-vino/: Cargo.toml
syslog-vino/src/: main.rs
